Bug 264704 - [GStreamer][WebCodecs][Debug] Assertions due to incorrect usage of WeakPtr
Summary: [GStreamer][WebCodecs][Debug] Assertions due to incorrect usage of WeakPtr
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Platform (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Philippe Normand
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-11-12 06:06 PST by Philippe Normand
Modified: 2023-11-13 03:07 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Philippe Normand 2023-11-12 06:06:17 PST
WeakPtr used from non-main thread is no good.

Thread 1 (Thread 0x7f75fb7fe640 (LWP 753732)):
#0  WTFCrash() () at /app/webkit/Source/WTF/wtf/Assertions.cpp:333
#1  0x00007f90baf7df91 in WTFCrashWithInfo(int, char const*, char const*, int) () at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Assertions.h:778
#2  0x00007f90c359a828 in WTF::WeakPtr<WebCore::GStreamerInternalVideoEncoder, WTF::DefaultWeakPtrImpl>::get() const (this=0x7f75fb7faba0) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/WeakPtr.h:125
#3  0x00007f90c357fe4d in operator()(GObject*, GParamSpec*, gpointer) const (__closure=0x0, pad=0x55d3b40b98b0, userData=0x7f90a037dcb0) at /app/webkit/Source/WebCore/platform/graphics/gstreamer/VideoEncoderGStreamer.cpp:183
#4  0x00007f90c357ff36 in _FUN(GObject*, GParamSpec*, gpointer) () at /app/webkit/Source/WebCore/platform/graphics/gstreamer/VideoEncoderGStreamer.cpp:183
#5  0x00007f90ac9a70b2 in g_closure_invoke (closure=0x55d3b40bdc20, return_value=0x0, n_param_values=2, param_values=0x7f75fb7fadc0, invocation_hint=0x7f75fb7fad40) at ../gobject/gclosure.c:832
#6  0x00007f90ac9d64b8 in signal_emit_unlocked_R.isra.0 (node=node@entry=0x55d3b3da6c70, detail=detail@entry=189, instance=instance@entry=0x55d3b40b98b0, emission_return=emission_return@entry=0x0, instance_and_params=instance_and_params@entry=0x7f75fb7fadc0) at ../gobject/gsignal.c:3812
#7  0x00007f90ac9c5d4f in g_signal_emit_valist (instance=<optimized out>, signal_id=<optimized out>, detail=<optimized out>, var_args=var_args@entry=0x7f75fb7faf80) at ../gobject/gsignal.c:3565
#8  0x00007f90ac9c6033 in g_signal_emit (instance=<optimized out>, signal_id=<optimized out>, detail=<optimized out>) at ../gobject/gsignal.c:3622
#9  0x00007f90ac9b2904 in g_object_dispatch_properties_changed (object=0x55d3b40b98b0, n_pspecs=<optimized out>, pspecs=<optimized out>) at ../gobject/gobject.c:1428
#10 0x00007f90b02e75a9 in gst_object_dispatch_properties_changed (object=0x55d3b40b98b0, n_pspecs=1, pspecs=0x7f75fb7fb0f0) at ../gst/gstobject.c:455
#11 0x00007f90ac9b6088 in g_object_notify_by_spec_internal (pspec=<optimized out>, object=0x55d3b40b98b0) at ../gobject/gobject.c:1552
#12 g_object_notify_by_pspec (object=object@entry=0x55d3b40b98b0, pspec=<optimized out>) at ../gobject/gobject.c:1658
#13 0x00007f90b033950d in store_sticky_event (pad=pad@entry=0x55d3b40b98b0 [GstPad|src], event=event@entry=0x7f75f4027d70 [None]) at ../gst/gstpad.c:5394
#14 0x00007f90b033e0a2 in gst_pad_push_event (pad=pad@entry=0x55d3b40b98b0 [GstPad|src], event=0x7f75f4027d70 [None]) at ../gst/gstpad.c:5691
#15 0x00007f90b033e383 in event_forward_func (pad=pad@entry=0x55d3b40b98b0 [GstPad|src], data=data@entry=0x7f75fb7fb2f0) at ../gst/gstpad.c:3130
#16 0x00007f90b033787d in gst_pad_forward (pad=pad@entry=0x55d3b40b9b20 [GstPad|proxypad3], forward=forward@entry=0x7f90b033e2c0 <event_forward_func>, user_data=user_data@entry=0x7f75fb7fb2f0) at ../gst/gstpad.c:3084
#17 0x00007f90b03379cd in gst_pad_event_default (pad=0x55d3b40b9b20 [GstPad|proxypad3], parent=<optimized out>, event=0x7f75f4027d70 [None]) at ../gst/gstpad.c:3181
#18 0x00007f90b0339ed5 in gst_pad_send_event_unchecked (pad=pad@entry=0x55d3b40b9b20 [GstPad|proxypad3], event=event@entry=0x7f75f4027d70 [None], type=<optimized out>, type@entry=GST_PAD_PROBE_TYPE_EVENT_DOWNSTREAM) at ../gst/gstpad.c:5939
#19 0x00007f90b033a6a0 in gst_pad_push_event_unchecked (pad=pad@entry=0x55d3b40dae60 [GstPad|src], event=0x7f75f4027d70 [None], type=<optimized out>, type@entry=GST_PAD_PROBE_TYPE_EVENT_DOWNSTREAM) at ../gst/gstpad.c:5572
#20 0x00007f90b033ac50 in push_sticky (pad=pad@entry=0x55d3b40dae60 [GstPad|src], ev=ev@entry=0x7f75fb7fb540, user_data=user_data@entry=0x7f75fb7fb5b0) at ../gst/gstpad.c:4057
#21 0x00007f90b032b7a3 in events_foreach (pad=0x55d3b40dae60 [GstPad|src], func=0x7f90b033ab50 <push_sticky>, user_data=0x7f75fb7fb5b0) at ../gst/gstpad.c:613
#22 0x00007f90b033e237 in check_sticky (event=0x7f75f4027d70 [None], pad=0x55d3b40dae60 [GstPad|src]) at ../gst/gstpad.c:4116
#23 gst_pad_push_event (pad=pad@entry=0x55d3b40dae60 [GstPad|src], event=0x7f75f4027d70 [None]) at ../gst/gstpad.c:5705
#24 0x00007f90ad347bf8 in gst_pad_set_caps (caps=0x7f75f401faf0 [None], pad=0x55d3b40dae60 [GstPad|src]) at ../gst/gstcompat.h:59
#25 gst_base_transform_setcaps (trans=trans@entry=0x55d3b40da850 [GstBaseTransform|capsfilter5], pad=<optimized out>, incaps=<optimized out>) at ../libs/gst/base/gstbasetransform.c:1346
#26 0x00007f90ad347e4b in gst_base_transform_sink_eventfunc (trans=trans@entry=0x55d3b40da850 [GstBaseTransform|capsfilter5], event=0x7f75f410fa90 [None]) at ../libs/gst/base/gstbasetransform.c:1951
#27 0x00007f90281e69a7 in gst_capsfilter_sink_event (trans=0x55d3b40da850 [GstBaseTransform|capsfilter5], event=0x7f75f410fa90 [None]) at ../plugins/elements/gstcapsfilter.c:527
#28 0x00007f90b0339ed5 in gst_pad_send_event_unchecked (pad=pad@entry=0x55d3b40dab00 [GstPad|sink], event=event@entry=0x7f75f410fa90 [None], type=<optimized out>, type@entry=GST_PAD_PROBE_TYPE_EVENT_DOWNSTREAM) at ../gst/gstpad.c:5939
#29 0x00007f90b033a6a0 in gst_pad_push_event_unchecked (pad=pad@entry=0x55d3b40d41b0 [GstPad|src], event=0x7f75f410fa90 [None], type=<optimized out>, type@entry=GST_PAD_PROBE_TYPE_EVENT_DOWNSTREAM) at ../gst/gstpad.c:5572
#30 0x00007f90b033ac50 in push_sticky (pad=pad@entry=0x55d3b40d41b0 [GstPad|src], ev=ev@entry=0x7f75fb7fb980, user_data=user_data@entry=0x7f75fb7fb9f0) at ../gst/gstpad.c:4057
#31 0x00007f90b032b7a3 in events_foreach (pad=0x55d3b40d41b0 [GstPad|src], func=0x7f90b033ab50 <push_sticky>, user_data=0x7f75fb7fb9f0) at ../gst/gstpad.c:613
#32 0x00007f90b033e237 in check_sticky (event=0x7f75f410fa90 [None], pad=0x55d3b40d41b0 [GstPad|src]) at ../gst/gstpad.c:4116
#33 gst_pad_push_event (pad=0x55d3b40d41b0 [GstPad|src], event=0x7f75f410fa90 [None]) at ../gst/gstpad.c:5705
#34 0x00007f90281af3cd in gst_pad_set_caps (caps=0x7f75f401faf0 [None], pad=0x55d3b40d41b0 [GstPad|src]) at /usr/include/gstreamer-1.0/gst/gstcompat.h:59
#35 gst_h264_parse_update_src_caps (h264parse=<optimized out>, caps=0x7f75f401faf0 [None]) at ../gst/videoparsers/gsth264parse.c:2532
#36 0x00007f90281b0817 in gst_h264_parse_set_caps (parse=0x55d3b40cb1f0 [GstBaseParse|h264parse1], caps=0x7f75f4008200 [None]) at ../gst/videoparsers/gsth264parse.c:3641
#37 0x00007f90ad32545c in gst_base_parse_sink_event_default (parse=0x55d3b40cb1f0 [GstBaseParse|h264parse1], event=0x7f75f410fc00 [None]) at ../libs/gst/base/gstbaseparse.c:1244
#38 0x00007f90b0339ed5 in gst_pad_send_event_unchecked (pad=pad@entry=0x55d3b40d3db0 [GstPad|sink], event=event@entry=0x7f75f410fc00 [None], type=<optimized out>, type@entry=GST_PAD_PROBE_TYPE_EVENT_DOWNSTREAM) at ../gst/gstpad.c:5939
#39 0x00007f90b033a6a0 in gst_pad_push_event_unchecked (pad=pad@entry=0x55d3b40d1d70 [GstPad|src], event=0x7f75f410fc00 [None], type=<optimized out>, type@entry=GST_PAD_PROBE_TYPE_EVENT_DOWNSTREAM) at ../gst/gstpad.c:5572
#40 0x00007f90b033ac50 in push_sticky (pad=pad@entry=0x55d3b40d1d70 [GstPad|src], ev=ev@entry=0x7f75fb7fbfa0, user_data=user_data@entry=0x7f75fb7fc010) at ../gst/gstpad.c:4057
#41 0x00007f90b032b7a3 in events_foreach (pad=0x55d3b40d1d70 [GstPad|src], func=0x7f90b033ab50 <push_sticky>, user_data=0x7f75fb7fc010) at ../gst/gstpad.c:613
#42 0x00007f90b033e237 in check_sticky (event=0x7f75f410fc00 [None], pad=0x55d3b40d1d70 [GstPad|src]) at ../gst/gstpad.c:4116
#43 gst_pad_push_event (pad=pad@entry=0x55d3b40d1d70 [GstPad|src], event=0x7f75f410fc00 [None]) at ../gst/gstpad.c:5705
#44 0x00007f90ad347bf8 in gst_pad_set_caps (caps=0x7f75f4008200 [None], pad=0x55d3b40d1d70 [GstPad|src]) at ../gst/gstcompat.h:59
#45 gst_base_transform_setcaps (trans=trans@entry=0x55d3b40d4780 [GstBaseTransform|capsfilter4], pad=<optimized out>, incaps=<optimized out>) at ../libs/gst/base/gstbasetransform.c:1346
#46 0x00007f90ad347e4b in gst_base_transform_sink_eventfunc (trans=trans@entry=0x55d3b40d4780 [GstBaseTransform|capsfilter4], event=0x7f75f4145620 [None]) at ../libs/gst/base/gstbasetransform.c:1951
#47 0x00007f90281e69a7 in gst_capsfilter_sink_event (trans=0x55d3b40d4780 [GstBaseTransform|capsfilter4], event=0x7f75f4145620 [None]) at ../plugins/elements/gstcapsfilter.c:527
#48 0x00007f90b0339ed5 in gst_pad_send_event_unchecked (pad=pad@entry=0x55d3b40d4a60 [GstPad|sink], event=event@entry=0x7f75f4145620 [None], type=<optimized out>, type@entry=GST_PAD_PROBE_TYPE_EVENT_DOWNSTREAM) at ../gst/gstpad.c:5939
#49 0x00007f90b033a6a0 in gst_pad_push_event_unchecked (pad=pad@entry=0x55d3b40b92e0 [GstPad|src], event=0x7f75f4145620 [None], type=<optimized out>, type@entry=GST_PAD_PROBE_TYPE_EVENT_DOWNSTREAM) at ../gst/gstpad.c:5572
#50 0x00007f90b033ac50 in push_sticky (pad=pad@entry=0x55d3b40b92e0 [GstPad|src], ev=ev@entry=0x7f75fb7fc3e0, user_data=user_data@entry=0x7f75fb7fc450) at ../gst/gstpad.c:4057
#51 0x00007f90b032b7a3 in events_foreach (pad=0x55d3b40b92e0 [GstPad|src], func=0x7f90b033ab50 <push_sticky>, user_data=0x7f75fb7fc450) at ../gst/gstpad.c:613
#52 0x00007f90b033e237 in check_sticky (event=0x7f75f4145620 [None], pad=0x55d3b40b92e0 [GstPad|src]) at ../gst/gstpad.c:4116
#53 gst_pad_push_event (pad=pad@entry=0x55d3b40b92e0 [GstPad|src], event=0x7f75f4145620 [None]) at ../gst/gstpad.c:5705
#54 0x00007f90ad170a68 in gst_pad_set_caps (caps=0x7f75f4008200 [None], pad=0x55d3b40b92e0 [GstPad|src]) at /usr/include/gstreamer-1.0/gst/gstcompat.h:59
#55 gst_video_encoder_negotiate_default (encoder=0x55d3b40b8aa0 [GstVideoEncoder|x264enc1]) at ../gst-libs/gst/video/gstvideoencoder.c:1944
#56 0x00007f90ad167eb4 in gst_video_encoder_negotiate_unlocked (encoder=0x55d3b40b8aa0 [GstVideoEncoder|x264enc1]) at ../gst-libs/gst/video/gstvideoencoder.c:2002
#57 gst_video_encoder_can_push_unlocked (encoder=encoder@entry=0x55d3b40b8aa0 [GstVideoEncoder|x264enc1]) at ../gst-libs/gst/video/gstvideoencoder.c:2264
#58 0x00007f90ad1699a7 in gst_video_encoder_finish_frame (encoder=encoder@entry=0x55d3b40b8aa0 [GstVideoEncoder|x264enc1], frame=frame@entry=0x55d3b3f071e0) at ../gst-libs/gst/video/gstvideoencoder.c:2537
#59 0x00007f904c00c29f in gst_x264_enc_encode_frame (encoder=encoder@entry=0x55d3b40b8aa0 [GstX264Enc|x264enc1], pic_in=pic_in@entry=0x7f75fb7fc7c0, input_frame=input_frame@entry=0x55d3b3f071e0, i_nal=i_nal@entry=0x7f75fb7fc7b8, send=send@entry=1) at ../ext/x264/gstx264enc.c:2709
#60 0x00007f904c00ca33 in gst_x264_enc_handle_frame (video_enc=0x55d3b40b8aa0 [GstVideoEncoder|x264enc1], frame=0x55d3b3f071e0) at ../ext/x264/gstx264enc.c:2593
#61 0x00007f90ad16765c in gst_video_encoder_chain (pad=<optimized out>, parent=0x55d3b40b8aa0 [GstObject|x264enc1], buf=<optimized out>) at ../gst-libs/gst/video/gstvideoencoder.c:1712
#62 0x00007f90b03387a5 in gst_pad_chain_data_unchecked (pad=pad@entry=0x55d3b40cc4d0 [GstPad|sink], type=type@entry=4112, data=data@entry=0x55d3b40cca90) at ../gst/gstpad.c:4463
#63 0x00007f90b033c194 in gst_pad_push_data (pad=pad@entry=0x55d3b40d3760 [GstPad|src], type=type@entry=4112, data=data@entry=0x55d3b40cca90) at ../gst/gstpad.c:4739
#64 0x00007f90b033c55e in gst_pad_push (pad=0x55d3b40d3760 [GstPad|src], buffer=0x55d3b40cca90 [None]) at ../gst/gstpad.c:4858
#65 0x00007f90ad3458cb in gst_base_transform_chain (pad=<optimized out>, parent=0x55d3b40cfd70 [GstObject|capsfilter3], buffer=<optimized out>) at ../libs/gst/base/gstbasetransform.c:2391
#66 0x00007f90b03387a5 in gst_pad_chain_data_unchecked (pad=pad@entry=0x55d3b40b95c0 [GstPad|sink], type=type@entry=4112, data=data@entry=0x55d3b40cca90) at ../gst/gstpad.c:4463
#67 0x00007f90b033c194 in gst_pad_push_data (pad=pad@entry=0x55d3b40d3280 [GstPad|src], type=type@entry=4112, data=data@entry=0x55d3b40cca90) at ../gst/gstpad.c:4739
#68 0x00007f90b033c55e in gst_pad_push (pad=0x55d3b40d3280 [GstPad|src], buffer=0x55d3b40cca90 [None]) at ../gst/gstpad.c:4858
#69 0x00007f90ad3458cb in gst_base_transform_chain (pad=<optimized out>, parent=0x55d3b40d04e0 [GstObject|videoscale1], buffer=<optimized out>) at ../libs/gst/base/gstbasetransform.c:2391
#70 0x00007f90b03387a5 in gst_pad_chain_data_unchecked (pad=pad@entry=0x55d3b40d2e90 [GstPad|sink], type=type@entry=4112, data=data@entry=0x55d3b40cca90) at ../gst/gstpad.c:4463
#71 0x00007f90b033c194 in gst_pad_push_data (pad=pad@entry=0x55d3b40d1490 [GstPad|src], type=type@entry=4112, data=data@entry=0x55d3b40cca90) at ../gst/gstpad.c:4739
#72 0x00007f90b033c55e in gst_pad_push (pad=0x55d3b40d1490 [GstPad|src], buffer=0x55d3b40cca90 [None]) at ../gst/gstpad.c:4858
#73 0x00007f90ad3458cb in gst_base_transform_chain (pad=<optimized out>, parent=0x55d3b40d0cc0 [GstObject|videoconvert1], buffer=<optimized out>) at ../libs/gst/base/gstbasetransform.c:2391
#74 0x00007f90b03387a5 in gst_pad_chain_data_unchecked (pad=pad@entry=0x55d3b40d10a0 [GstPad|sink], type=type@entry=4112, data=data@entry=0x55d3b41281b0) at ../gst/gstpad.c:4463
#75 0x00007f90b033c194 in gst_pad_push_data (pad=pad@entry=0x55d3b40c7270 [GstPad|proxypad2], type=type@entry=4112, data=data@entry=0x55d3b41281b0) at ../gst/gstpad.c:4739
#76 0x00007f90b033c55e in gst_pad_push (pad=0x55d3b40c7270 [GstPad|proxypad2], buffer=0x55d3b41281b0 [None]) at ../gst/gstpad.c:4858
#77 0x00007f90b032265b in gst_proxy_pad_chain_default (pad=<optimized out>, parent=<optimized out>, buffer=0x55d3b41281b0 [None]) at ../gst/gstghostpad.c:127
#78 0x00007f90b03387a5 in gst_pad_chain_data_unchecked (pad=pad@entry=0x55d3b40bd9e0 [GstPad|sink], type=type@entry=4112, data=data@entry=0x55d3b41281b0) at ../gst/gstpad.c:4463
#79 0x00007f90b033c194 in gst_pad_push_data (pad=pad@entry=0x55d3b40cc0a0 [GstPad|src], type=type@entry=4112, data=data@entry=0x55d3b41281b0) at ../gst/gstpad.c:4739
#80 0x00007f90b033c55e in gst_pad_push (pad=0x55d3b40cc0a0 [GstPad|src], buffer=0x55d3b41281b0 [None]) at ../gst/gstpad.c:4858
#81 0x00007f90c3628b29 in WebCore::GStreamerElementHarness::pushBufferFull(WTF::GRefPtr<_GstBuffer>&&) (this=0x7f90a03a5b00, buffer=...) at /app/webkit/Source/WebCore/platform/gstreamer/GStreamerElementHarness.cpp:249
#82 0x00007f90c3628a4b in WebCore::GStreamerElementHarness::pushBuffer(WTF::GRefPtr<_GstBuffer>&&) (this=0x7f90a03a5b00, buffer=...) at /app/webkit/Source/WebCore/platform/gstreamer/GStreamerElementHarness.cpp:242
#83 0x00007f90c3628995 in WebCore::GStreamerElementHarness::pushSample(WTF::GRefPtr<_GstSample>&&) (this=0x7f90a03a5b00, sample=...) at /app/webkit/Source/WebCore/platform/gstreamer/GStreamerElementHarness.cpp:229
#84 0x00007f90c3580eb8 in WebCore::GStreamerInternalVideoEncoder::encode(WebCore::VideoEncoder::RawFrame&&, bool) (this=0x7f90a03a5a80, rawFrame=..., shouldGenerateKeyFrame=true) at /app/webkit/Source/WebCore/platform/graphics/gstreamer/VideoEncoderGStreamer.cpp:318
#85 0x00007f90c357f3d1 in operator()() (__closure=0x7f90a037a4c8) at /app/webkit/Source/WebCore/platform/graphics/gstreamer/VideoEncoderGStreamer.cpp:136
#86 0x00007f90c3595748 in WTF::Detail::CallableWrapper<WebCore::GStreamerVideoEncoder::encode(WebCore::VideoEncoder::RawFrame&&, bool, WebCore::VideoEncoder::EncodeCallback&&)::<lambda()>, void>::call(void) (this=0x7f90a037a4c0) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:53
#87 0x00007f90bb88f28b in WTF::Function<void ()>::operator()() const (this=0x7f90a0389b50) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:82
#88 0x00007f90bed84ffe in operator()() const (__closure=0x7f90a0389b48) at /app/webkit/Source/WTF/wtf/generic/WorkQueueGeneric.cpp:68
#89 0x00007f90bed86ed8 in WTF::Detail::CallableWrapper<WTF::WorkQueueBase::dispatch(WTF::Function<void()>&&)::<lambda()>, void>::call(void) (this=0x7f90a0389b40) at /app/webkit/Source/WTF/wtf/Function.h:53
#90 0x00007f90bb88f28b in WTF::Function<void ()>::operator()() const (this=0x7f75fb7fd850) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:82
#91 0x00007f90becd4d81 in WTF::RunLoop::performWork() (this=0x7f90a03940c0) at /app/webkit/Source/WTF/wtf/RunLoop.cpp:147
#92 0x00007f90bed88d18 in operator()(gpointer) const (__closure=0x0, userData=0x7f90a03940c0) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:80
#93 0x00007f90bed88d3c in _FUN(gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:82
#94 0x00007f90bed88cab in operator()(GSource*, GSourceFunc, gpointer) const (__closure=0x0, source=0x7f75f4000dc0, callback=0x7f90bed88d1f <_FUN(gpointer)>, userData=0x7f90a03940c0) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:53
#95 0x00007f90bed88cf9 in _FUN(GSource*, GSourceFunc, gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:56
#96 0x00007f90b0547527 in g_main_dispatch (context=0x7f75f4000b70) at ../glib/gmain.c:3460
#97 g_main_context_dispatch (context=0x7f75f4000b70) at ../glib/gmain.c:4200
#98 0x00007f90b05a4888 in g_main_context_iterate.constprop.0 (context=0x7f75f4000b70, block=<optimized out>, dispatch=1, self=<optimized out>) at ../glib/gmain.c:4276
#99 0x00007f90b0546d7f in g_main_loop_run (loop=0x7f75f4000da0) at ../glib/gmain.c:4479
#100 0x00007f90bed8936c in WTF::RunLoop::run() () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:108
#101 0x00007f90becd4b15 in operator()() const (__closure=0x7f90a038be28) at /app/webkit/Source/WTF/wtf/RunLoop.cpp:114
#102 0x00007f90becd6222 in WTF::Detail::CallableWrapper<WTF::RunLoop::create(char const*, WTF::ThreadType, WTF::Thread::QOS)::<lambda()>, void>::call(void) (this=0x7f90a038be20) at /app/webkit/Source/WTF/wtf/Function.h:53
#103 0x00007f90bb88f28b in WTF::Function<void ()>::operator()() const (this=0x7f75fb7fdb50) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:82
#104 0x00007f90becdea77 in WTF::Thread::entryPoint(WTF::Thread::NewThreadContext*) (newThreadContext=0x7f90a0360400) at /app/webkit/Source/WTF/wtf/Threading.cpp:258
#105 0x00007f90bed9712d in WTF::wtfThreadEntryPoint(void*) (context=0x7f90a0360400) at /app/webkit/Source/WTF/wtf/posix/ThreadingPOSIX.cpp:243
#106 0x00007f90afdc425a in start_thread (arg=<optimized out>) at pthread_create.c:442
#107 0x00007f90afe4cfc4 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:100
Comment 1 Philippe Normand 2023-11-12 06:07:54 PST
Pull request: https://github.com/WebKit/WebKit/pull/20389
Comment 2 EWS 2023-11-13 03:06:45 PST
Committed 270632@main (54140a7b23ef): <https://commits.webkit.org/270632@main>

Reviewed commits have been landed. Closing PR #20389 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2023-11-13 03:07:14 PST
<rdar://problem/118324896>