[GStreamer][WebCodecs][Debug] Assertions due to incorrect usage of WeakPtr https://bugs.webkit.org/show_bug.cgi?id=264704

Reviewed by Xabier Rodriguez-Calvar.

Adapt audio/video encoders to rely on ThreadSafeWeakPtr, that can be used from non-main threads.

* Source/WebCore/platform/audio/gstreamer/AudioEncoderGStreamer.cpp:
(WebCore::GStreamerAudioEncoder::encode):
(WebCore::GStreamerInternalAudioEncoder::GStreamerInternalAudioEncoder):
* Source/WebCore/platform/graphics/gstreamer/VideoEncoderGStreamer.cpp:
(WebCore::GStreamerVideoEncoder::encode):
(WebCore::GStreamerInternalVideoEncoder::GStreamerInternalVideoEncoder):

Canonical link: https://commits.webkit.org/270632@main